--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -460,7 +460,7 @@
     </script>
 
     <!-- related-news -->
-    <div class="related-news">
+    <div class="related-news related-news-comets">
       <h1>RELATED NEWS</h1>
       <div class="related-carousel">
         <div
@@ -474,12 +474,12 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1833_PIA24625-Ingenuity_Spots_Perseverance_From_Above-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1731_Oort_Cloud_Illustration-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    With Goals Met, NASA to Push Envelope with Ingenuity Mars
-                    Helicopter
+                    Comet Catalina Suggests Comets Delivered Carbon to Rocky
+                    Planets
                   </p>
                 </a>
               </div>
@@ -487,12 +487,11 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1827_PIA24624_Ingenuity_Flight_Three-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1722_hubble-trojan-comet-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Ingenuity Mars Helicopter Flies Faster, Farther on
-                    Third Flight
+                    Comet Makes a Pit Stop Near Jupiter's Asteroids
                   </p>
                 </a>
               </div>
@@ -500,11 +499,47 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1824_Ingenuity_Second_Flight-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/10022_D2004_0630_D401_320.jpg"
+                    alt=""
+                  />
+                  <p class="text-center">What Are NASA's Lucky Peanuts?</p>
+                </a>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="col-4">
+                <a href="#1">
+                  <img
+                    class="img-fluid"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1628_eclipsecometsoho2-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Ingenuity Logs Second Successful Flight
+                    Recently Discovered Comet Seen During 2020 Total Solar
+                    Eclipse
+                  </p>
+                </a>
+              </div>
+              <div class="col-4">
+                <a href="#1">
+                  <img
+                    class="img-fluid"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1561_sungrazing_comet_parker-640x480.gif"
+                    alt=""
+                  />
+                  <p class="text-center">Two Views of a Sungrazing Comet</p>
+                </a>
+              </div>
+              <div class="col-4">
+                <a href="#1">
+                  <img
+                    class="img-fluid"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1520_Blue_Moon_Airplane_320.jpg"
+                    alt=""
+                  />
+                  <p class="text-center">
+                    October 2020: The Next Full Moon is the Harvest Moon
                   </p>
                 </a>
               </div>
@@ -515,12 +550,11 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1822_moxie_being_installed_in_perseverance-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1507_Comet_-67P_Churyumov-Gerasimenko-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Perseverance Mars Rover Extracts First Oxygen from
-                    Red Planet
+                    Comet Discovered to Have Its Own Northern Lights
                   </p>
                 </a>
               </div>
@@ -528,37 +562,11 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1679_list.jpg"
-                    alt=""
-                  />
-                  <p class="text-center">Mars Resources</p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1801_PIA24584_Ingenuity_First_Flight-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1462_stsci-h-v2045a_neowise_grey-320x240.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    Ingenuity's First Black-and-White Image From the Air
-                  </p>
-                </a>
-              </div>
-            </div>
-
-            <div class="carousel-item">
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1815_Perseverance_View_Ingenuity-640x480.gif"
-                    alt=""
-                  />
-                  <p class="text-center">
-                    NASA's Ingenuity Mars Helicopter Succeeds in Historic First
-                    Flight
+                    Hubble Snaps Close-Up of Celebrity Comet NEOWISE
                   </p>
                 </a>
               </div>
@@ -566,24 +574,12 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1795_PIA20331-crowd-watching-Odyssey-launch-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1421_2020-NK1_320.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Odyssey Orbiter Marks 20 Historic Years of Mapping
-                    Mars
-                  </p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1798_pia24542-perseverances-selfie-with-ingenuity-640x480.jpg"
-                    alt=""
-                  />
-                  <p class="text-center">
-                    Say Cheese on Mars: Perseverance's Selfie With Ingenuity
+                    Arecibo Observatory Returns from Tropical Storm Isaias
+                    Lockdown to Track Asteroid for NASA
                   </p>
                 </a>
               </div>
