--- a/overview.html
+++ b/overview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Detail Mars</title>
+    <title>Overview</title>
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -65,12 +65,12 @@
           ><i class="fas fa-bars"></i
         ></label>
         <div class="content">
-          <div class="logo"><a href="../index.html">Astronomy</a></div>
+          <div class="logo"><a href="index.html">Astronomy</a></div>
           <ul class="links">
-            <li><a href="../index.html">Homepage</a></li>
-            <li><a href="../overview.html">Overview</a></li>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a class="active-menu" href="overview.html">Overview</a></li>
             <li>
-              <a class="active-menu" href="#" class="desktop-link"
+              <a href="#" class="desktop-link"
                 >Planets <i class="fa fa-caret-down"></i
               ></a>
               <input type="checkbox" id="show-features" />
@@ -78,8 +78,8 @@
                 >Planets <i class="fa fa-caret-down"></i
               ></label>
               <ul>
-                <li><a href="../planets/detail-mars.html">Mars</a></li>
-                <li><a href="../planets/detail-venus.html">Venus</a></li>
+                <li><a href="planets/detail-mars.html">Mars</a></li>
+                <li><a href="planets/detail-venus.html">Venus</a></li>
                 <li><a href="#">Drop Menu 3</a></li>
                 <li><a href="#">Drop Menu 4</a></li>
               </ul>
@@ -93,7 +93,7 @@
                 >Stars <i class="fa fa-caret-down"></i
               ></label>
               <ul>
-                <li><a href="../stars/detail-comet.html">Comet</a></li>
+                <li><a href="stars/detail-comet.html">Comet</a></li>
                 <li><a href="#">Drop Menu 2</a></li>
                 <li><a href="#">Drop Menu 3</a></li>
 
