--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -68,7 +68,7 @@
           <div class="logo"><a href="../index.html">Astronomy</a></div>
           <ul class="links">
             <li><a href="../index.html">Homepage</a></li>
-            <li><a href="#">Overview</a></li>
+            <li><a href="../overview.html">Overview</a></li>
             <li>
               <a href="#" class="desktop-link"
                 >Planets <i class="fa fa-caret-down"></i
