--- a/planets/detail-mars.html
+++ b/planets/detail-mars.html
@@ -113,8 +113,8 @@
                 </li>
               </ul>
             </li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Maps</a></li>
+            <li><a href="../blog.html">Blogs</a></li>
+            <li><a href="../maps.html">Maps</a></li>
           </ul>
         </div>
       </nav>
