--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
