--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -906,7 +906,7 @@
     </script>
 
     <!-- related-news -->
-    <div class="related-news">
+    <div class="related-news related-news-venus">
       <h1>RELATED NEWS</h1>
       <div class="related-carousel">
         <div
@@ -920,12 +920,12 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1833_PIA24625-Ingenuity_Spots_Perseverance_From_Above-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1838_wispr_venus_image_640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    With Goals Met, NASA to Push Envelope with Ingenuity Mars
-                    Helicopter
+                    NASA's Parker Solar Probe Discovers Natural Radio Emission
+                    in Venus' Atmosphere
                   </p>
                 </a>
               </div>
@@ -933,12 +933,12 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1827_PIA24624_Ingenuity_Flight_Three-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1812_Parker_Solar_Probe_Venus-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Ingenuity Mars Helicopter Flies Faster, Farther on
-                    Third Flight
+                    NASA's Parker Solar Probe Sees Venus Orbital Dust Ring in
+                    1st Complete View
                   </p>
                 </a>
               </div>
@@ -946,49 +946,11 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1824_Ingenuity_Second_Flight-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1721_Parker_wispr_venus_image-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Ingenuity Logs Second Successful Flight
-                  </p>
-                </a>
-              </div>
-            </div>
-
-            <div class="carousel-item">
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1822_moxie_being_installed_in_perseverance-640x480.jpg"
-                    alt=""
-                  />
-                  <p class="text-center">
-                    NASA's Perseverance Mars Rover Extracts First Oxygen from
-                    Red Planet
-                  </p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1679_list.jpg"
-                    alt=""
-                  />
-                  <p class="text-center">Mars Resources</p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1801_PIA24584_Ingenuity_First_Flight-640x480.jpg"
-                    alt=""
-                  />
-                  <p class="text-center">
-                    Ingenuity's First Black-and-White Image From the Air
+                    Parker Solar Probe Offers Stunning View of Venus
                   </p>
                 </a>
               </div>
@@ -999,12 +961,11 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1815_Perseverance_View_Ingenuity-640x480.gif"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1715_Snow_Moon_320.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Ingenuity Mars Helicopter Succeeds in Historic First
-                    Flight
+                    The Next Full Moon is the Snow, Storm, and Hunger Moon
                   </p>
                 </a>
               </div>
@@ -1012,12 +973,47 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1795_PIA20331-crowd-watching-Odyssey-launch-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/10022_D2004_0630_D401_320.jpg"
+                    alt=""
+                  />
+                  <p class="text-center">What Are NASA's Lucky Peanuts?</p>
+                </a>
+              </div>
+              <div class="col-4">
+                <a href="#1">
+                  <img
+                    class="img-fluid"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1703_pia24315_05_guidedentry_2000-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    NASA's Odyssey Orbiter Marks 20 Historic Years of Mapping
-                    Mars
+                    NASA's Next Mars Rover Is Ready for the Most Precise Landing
+                    Yet
+                  </p>
+                </a>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="col-4">
+                <a href="#1">
+                  <img
+                    class="img-fluid"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1519_688_Venus_list.jpg"
+                    alt=""
+                  />
+                  <p class="text-center">Venus Resources</p>
+                </a>
+              </div>
+              <div class="col-4">
+                <a href="#1">
+                  <img
+                    class="img-fluid"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1674_Solar_Spacecraft_Unique_Views-640x480.gif"
+                    alt=""
+                  />
+                  <p class="text-center">
+                    Unique Solar System Views from Sun-Watching Spacecraft
                   </p>
                 </a>
               </div>
@@ -1025,11 +1021,11 @@
                 <a href="#1">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1798_pia24542-perseverances-selfie-with-ingenuity-640x480.jpg"
+                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1620_Hubble_Exoplanet_HD_106906-b-640x480.jpg"
                     alt=""
                   />
                   <p class="text-center">
-                    Say Cheese on Mars: Perseverance's Selfie With Ingenuity
+                    Hubble Pins Down Weird Exoplanet with Far-Flung Orbit
                   </p>
                 </a>
               </div>
