--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -185,7 +185,7 @@
         });
       </script>
     </div>
-    <div class="more-bar">
+    <div class="more-bar more-bar-venus">
       <a href="#tab"> MORE <i class="fas fa-angle-down"></i> </a>
     </div>
     <!-- tab -->
