--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -128,20 +128,18 @@
       />
       <h1 class="stars_title">Comets</h1>
     </div>
-    <div class="more-bar">
-      <a href="#tab"> MORE <i class="fas fa-angle-down"></i> </a>
-    </div>
+
     <!-- tab -->
-    <div id="tab" class="wrapper-tab">
+    <div id="tab" class="wrapper-tab wrapper-tab-comets">
       <div class="tabs container">
         <ul>
-          <li class="col-4 active-tab">
+          <li class="col-4 active-tab wrapper-tab-comets">
             <span class="text">OVERVIEW</span>
           </li>
-          <li class="col-4">
+          <li class="col-4 wrapper-tab-comets">
             <span class="text">IN DEPTH</span>
           </li>
-          <li class="col-4">
+          <li class="col-4 wrapper-tab-comets">
             <span class="text">GALLERIES</span>
           </li>
         </ul>
