--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -130,7 +130,7 @@
     </div>
 
     <!-- tab -->
-    <div id="tab" class="wrapper-tab wrapper-tab-comets">
+    <div id="tab" class="wrapper-tab wrapper-tab-comet">
       <div class="tabs container">
         <ul>
           <li class="col-4 active-tab wrapper-tab-comets">
