--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -189,16 +189,16 @@
       <a href="#tab"> MORE <i class="fas fa-angle-down"></i> </a>
     </div>
     <!-- tab -->
-    <div id="tab" class="wrapper-tab">
+    <div id="tab" class="wrapper-tab wrapper-tab-venus">
       <div class="tabs container">
         <ul>
-          <li class="col-4 active-tab">
+          <li class="col-4 active-tab wrapper-tab-venuss">
             <span class="text">OVERVIEW</span>
           </li>
-          <li class="col-4">
+          <li class="col-4 wrapper-tab-venuss">
             <span class="text">IN DEPTH</span>
           </li>
-          <li class="col-4">
+          <li class="col-4 wrapper-tab-venuss">
             <span class="text">GALLERIES</span>
           </li>
         </ul>
