--- a/overview.html
+++ b/overview.html
@@ -407,7 +407,7 @@
               </div>
             </nav>
             <div class="content-indepth">
-              <p>
+              <p id="Introduction">
                 The planetary system we call home is located in an outer spiral
                 arm of the Milky Way galaxy.
               </p>
@@ -434,7 +434,7 @@
                 stars accompanied by families of objects, perhaps some with life
                 of their own.
               </p>
-              <h3>
+              <h3 id="Size-and-Distance">
                 <span><span>Size and Distance</span></span>
               </h3>
               <p>
