--- a/planets/detail-mars.html
+++ b/planets/detail-mars.html
@@ -217,7 +217,7 @@
                 <a href="#ten-thing"><li>Ten Things to Know About Mars</li></a>
                 <a href="#Humans-to-Mars"><li>Humans to Mars</li></a>
                 <a href="#Pop-Culture"><li>Pop Culture</li></a>
-                <a href="#Kid-Friendly Mars"><li>Kid-Friendly Mars</li></a>
+                <a href="#Kid-Friendly-Mars"><li>Kid-Friendly Mars</li></a>
                 <a href="#Resources"><li>Resources</li></a>
               </ul>
             </div>
@@ -268,31 +268,18 @@
                 <b><a href="#tab">Explore Mars In Depth ›</a></b>
               </p>
             </div>
-            <!-- carousel-overview -->
             <div
               id="carousel-overview"
-              class="carousel slide"
+              class="carousel slide container"
               data-ride="carousel"
             >
-              <ul class="carousel-indicators">
-                <li
-                  data-target="#carousel-overview"
-                  data-slide-to="0"
-                  class="active"
-                ></li>
-                <li data-target="#carousel-overview" data-slide-to="1"></li>
-                <li data-target="#carousel-overview" data-slide-to="2"></li>
-                <li data-target="#carousel-overview" data-slide-to="3"></li>
-              </ul>
               <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/77_mars_carousel_1.jpg"
-                    alt="1"
-                  />
-                  <div class="carousel-caption">
-                    <h3>1</h3>
+                <div class="carousel-item">
+                  <div class="col-12 carousel-info">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/feature_items/images/77_mars_carousel_1.jpg"
+                    />
                     <p>
                       This mosaic comprises about 50 red-, green-, and
                       violet-filter Viking Orbiter images, mosaiced in an
@@ -303,13 +290,11 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/78_mars_carousel_2.jpg"
-                    alt="2"
-                  />
-                  <div class="carousel-caption">
-                    <h3>2</h3>
+                  <div class="col-12 carousel-info">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/feature_items/images/78_mars_carousel_2.jpg"
+                    />
                     <p>
                       On a clear day on Mars, you can see tens of thousands of
                       rocks. Two high-resolution scans by one of Viking 2's
@@ -320,13 +305,11 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/79_mars_carousel_3.jpg"
-                    alt="3"
-                  />
-                  <div class="carousel-caption">
-                    <h3>3</h3>
+                  <div class="col-12 carousel-info">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/feature_items/images/79_mars_carousel_3.jpg"
+                    />
                     <p>
                       During the Viking Mission, the Viking Lander Camera System
                       acquired many high-resolution images of the scene at
@@ -339,12 +322,11 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/80_mars_carousel_5.jpg"
-                    alt="4"
-                  />
-                  <div class="carousel-caption">
-                    <h3>4</h3>
+                  <div class="col-12 carousel-info">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/feature_items/images/80_mars_carousel_5.jpg"
+                    />
                     <p>
                       A panoramic view of Pathfinder's Ares Vallis landing site,
                       featured on the cover of the Dec. 5 issue of Science,
@@ -358,13 +340,12 @@
                     </p>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/81_mars_carousel_4.jpg"
-                    alt="5"
-                  />
-                  <div class="carousel-caption">
-                    <h3>5</h3>
+                <div class="carousel-item active">
+                  <div class="col-12 carousel-info">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/feature_items/images/81_mars_carousel_4.jpg"
+                    />
                     <p>
                       This 8-image mosaic was acquired during the late afternoon
                       (near 5pm LST, note the long shadows) on Sol 2 as part of
@@ -390,7 +371,6 @@
                 <span class="carousel-control-next-icon"></span>
               </a>
             </div>
-            <!-- end carousel-overview -->
             <div id="ten-thing" class="ten-thing-mars">
               <div class="container">
                 <h2>10 Need-to-Know Things About Mars</h2>
@@ -961,7 +941,9 @@
         <!-- Start gallery -->
         <div class="tab_wrap" style="display: none">
           <div class="tab_content">
-            <p>Gallery</p>
+            <div class="content-gallery">
+              <p>Gallery</p>
+            </div>
           </div>
         </div>
         <!-- End gallery -->
