--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -429,7 +429,9 @@
         <!-- Start gallery -->
         <div class="tab_wrap" style="display: none">
           <div class="tab_content">
-            <p>Gallery</p>
+            <div class="content-gallery">
+              <p>Gallery</p>
+            </div>
           </div>
         </div>
         <!-- End gallery -->
