--- a/planets/detail-mars.html
+++ b/planets/detail-mars.html
@@ -984,11 +984,20 @@
             <div class="carousel-item active">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1833_PIA24625-Ingenuity_Spots_Perseverance_From_Above-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1833_PIA24625-Ingenuity_Spots_Perseverance_From_Above-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The Mars Helicopter will extend its range, speed, and
+                        flight duration on Flight Four.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     With Goals Met, NASA to Push Envelope with Ingenuity Mars
                     Helicopter
@@ -997,11 +1006,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1827_PIA24624_Ingenuity_Flight_Three-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1827_PIA24624_Ingenuity_Flight_Three-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The third flight was conducted at speeds and distances
+                        beyond what had ever been previously demonstrated, even
+                        in testing on Earth.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Ingenuity Mars Helicopter Flies Faster, Farther on
                     Third Flight
@@ -1010,11 +1029,20 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1824_Ingenuity_Second_Flight-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1824_Ingenuity_Second_Flight-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The small rotorcraft’s horizons were expanded on its
+                        second flight.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Ingenuity Logs Second Successful Flight
                   </p>
@@ -1025,11 +1053,20 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1822_moxie_being_installed_in_perseverance-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1822_moxie_being_installed_in_perseverance-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        A toaster-size, experimental instrument aboard
+                        Perseverance called the MOXIE accomplished the task.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Perseverance Mars Rover Extracts First Oxygen from
                     Red Planet
@@ -1038,21 +1075,40 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1679_list.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1679_list.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        This page showcases our resources for those interested
+                        in learning more about Mars.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">Mars Resources</p>
                 </a>
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1801_PIA24584_Ingenuity_First_Flight-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1801_PIA24584_Ingenuity_First_Flight-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        Ingenuity took this shot while hovering over the Martian
+                        surface during the first powered, controlled flight on
+                        another planet.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Ingenuity's First Black-and-White Image From the Air
                   </p>
@@ -1063,11 +1119,21 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1815_Perseverance_View_Ingenuity-640x480.gif"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1815_Perseverance_View_Ingenuity-640x480.gif"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        NASA’s Ingenuity Mars Helicopter has become the first
+                        aircraft in history to make a powered, controlled flight
+                        on another planet.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Ingenuity Mars Helicopter Succeeds in Historic First
                     Flight
@@ -1076,11 +1142,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1795_PIA20331-crowd-watching-Odyssey-launch-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1795_PIA20331-crowd-watching-Odyssey-launch-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        For two decades, the longest-lived spacecraft at the Red
+                        Planet has helped locate water ice, assess landing
+                        sites, and study the planet’s moons.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Odyssey Orbiter Marks 20 Historic Years of Mapping
                     Mars
@@ -1089,11 +1165,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1798_pia24542-perseverances-selfie-with-ingenuity-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1798_pia24542-perseverances-selfie-with-ingenuity-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        NASA’s newest Mars rover used a camera on the end of its
+                        robotic arm to snap this shot of itself with the
+                        Ingenuity helicopter nearby.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Say Cheese on Mars: Perseverance's Selfie With Ingenuity
                   </p>
